--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "main": "main.js",
   "dependencies": {
     "ajv": "^4.7.5",
+    "babel-cli": "^6.18.0",
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.18.0",
+    "chai": "^3.5.0",
+    "css-loader": "^0.26.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "isomorphic-fetch": "^2.2.1",
-    "mobx": "^2.5.2",
-    "mobx-react": "^3.5.6",
-    "mobx-react-devtools": "^4.2.6",
-    "mobx-react-form": "^1.11.12",
+    "mocha": "^3.1.2",
     "node-uuid": "^1.4.7",
     "react": "^15.2.0",
     "react-bootstrap": "^0.30.3",
@@ -26,13 +30,21 @@
     "redux-form": "^6.1.0",
     "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "validatorjs": "^3.7.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
   "scripts": {
     "start": "webpack-dev-server --inline --hot",
-    "build": "NODE_ENV=production webpack"
+    "build": "NODE_ENV=production webpack",
+    "test": "mocha --compilers js:babel-core/register --recursive"
   },
   "author": "",
   "license": "ISC"
